# seeder-server

./: .gitignore  CMakeLists.txt  README.md
libseeder/: CMakeLists.txt  SeederService.cpp  SeederService.h
libseeder/argument-parser/: ArgumentParser.cpp  ArgumentParser.h
libseeder/client-manager/: Client.cpp  Client.h  ClientManager.cpp  ClientManager.h
libseeder/communication/: Communicator.h  RawSocketCommunicator.cpp  RawSocketCommunicator.h  Request.fbs  Request_generated.h  Response.fbs  Response_generated.h
libseeder/database/: InMemoryCollection.cpp  InMemoryCollection.h  InMemoryDatabase.cpp  InMemoryDatabase.h  InMemoryPersistor.cpp  InMemoryPersistor.h  Persistor.h
libseeder/logger/: SpdLogger.cpp  SpdLogger.h
libseeder/utils/: Thread.h
seeder/: CMakeLists.txt  main.cpp
test/: ArgumentParserFunctionality.cpp  CMakeLists.txt  ClientManagerFunctionality.cpp
